# DiffDashDrone

./: .gitignore  .tool-versions  Magefile.go  README.md  Roadmap.md  go.mod  go.sum  go.work.sum  main.go  packager.py
.devcontainer/: devcontainer.json
analysis/: analyzer.go
notebooks/: README.md  pyproject.toml  rag.ipynb  vector_exporter.ipynb
storage/: config.go  repo_db.go
