[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.4"
openai = "^1.6.1"
qdrant-client = {extras = ["fastembed"], version = "^1.7.0"}
pyarrow = "^14.0.2"
tqdm = "^4.66.1"
langchain-openai = "^0.0.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
